Fix tree header alignment and highlight sub folders differently (#1965)

--- a/frontend/src/app/+form/sidebars/tree/tree-header/tree-header.component.scss
+++ b/frontend/src/app/+form/sidebars/tree/tree-header/tree-header.component.scss
@@ -12,6 +12,7 @@
 
     .show-all {
       font-size: 14px;
+      height: 40px;
     }
   }
 }
@@ -46,7 +47,7 @@
         border: none;
       }
     }
-    
+
     .mat-form-field-prefix,
     .mat-form-field-suffix {
       top: 0;
